--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- JavaScript -->
-    <script src="D:\Documents\Go Food Pro\gdp.js"></script>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+   
 <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" href="gofoodpro.css">
 
@@ -25,11 +24,12 @@
     <title>Go Food Pro</title>
   </head>
   <body>
+   
     <!-- Start Nav Bar -->
     <!-- Image and text -->
 <nav class="navbar navbar-dark navbar-expand-md bg-#BBD646 sticky-top">
   <a class="navbar-brand" href="#">
-    <img class="headerpic" src="D:\Documents\Go Food Pro\gfpimg\logo go food pro-02 (1).png" width="80" height="80" class="d-inline-block align-top" alt="">
+    <img class="headerpic" src="gfpimg/_BEE1232.png" width="80" height="80" class="d-inline-block align-top" alt="">
   </a>
   <div class="container">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,7 @@
       </li>
       <li class="cart">
         <a href="#">
-          <i class="fas fa-shopping-cart"></i><span>0</span>
+          <i class="fas fa-shopping-cart"></i><span id = 'numberCart'>0</span>
         </a>
       </li>
     </ul>
@@ -76,27 +76,27 @@
       <div class="container">
         <div class="row mt-2">
           <section id="Galletas"></section>
-          <div class="col-12 mt-5"><h1 class="display-4 text-center">-Galletas-</h1></div>
+          <div id = 'categories' class="col-12 mt-5"><h1 class="display-4 text-center">-Galletas-</h1></div>
         </div>
-          <div class="row d-flex justify-content-center">
+          <div id='cards' class="row d-flex justify-content-center">
             <!-- Start Product-1 -->
               <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-2 mt-2">
-                <div class="card">
-                    <img src="D:\Documents\Go Food Pro\gfpimg\galletas-almendra.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h4 class="card-title">Galletas de Almendra</h4>
-                      <h5 class="card-title">&#8353; 2,000</h5>
+                <div id = 'card-id' class="card">
+                    <img src="gfpimg\galletas-almendra.jpg" class="card-img-top" alt="...">
+                    <div class= "card-body">
+                      <h4 id = 'title-card' class="card-title">Galletas de Almendra</h4>
+                      <h5 id ='price-card' class="card-title">&#8353; 2,000</h5>
                       <p>
                         <a class="btn btn-info" data-toggle="collapse" href="#cart1desc" role="button" aria-expanded="false" aria-controls="collapseExample">
                           Descripcion del Producto
                         </a>
                          </p>
                       <div class="collapse" id="cart1desc">
-                        <div class="card card-body">
+                        <div id="description-card" class="card card-body">
                           6 unidades de galletas Gluten free.
                         </div>
                       </div>
-                      <a href="#" class="btn btn-success add-cart cart1">Añadir al Carrito</a>
+                      <a href="#" onclick="addCart('hola')" class="btn btn-success add-cart cart1">Añadir al Carrito</a>
                     </div>
                   </div>
                 </div>
@@ -104,7 +104,7 @@
                 <!-- Start Product-1 -->
               <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-2 mt-5">
                 <div class="card">
-                    <img src="D:\Documents\Go Food Pro\gfpimg\galletas-cacao.jpg" class="card-img-top" alt="...">
+                    <img src="gfpimg\galletas-cacao.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h4 class="card-title">Galletas de Cacao</h4>
                       <h5 class="card-title">&#8353; 2,000</h5>
@@ -131,7 +131,7 @@
                 <div class="row d-flex justify-content-center">
                   <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                     <div class="card">
-                        <img src="D:\Documents\Go Food Pro\gfpimg\zanabana-muffin.jpg" class="card-img-top" alt="...">
+                        <img src="gfpimg\zanabana-muffin.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h4 class="card-title">ZanaBana Muffin</h4>
                           <h5 class="card-title">&#8353; 2,000</h5>
@@ -151,7 +151,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                       <div class="card">
-                          <img src="D:\Documents\Go Food Pro\gfpimg\choco-muffin.jpg" class="card-img-top" alt="...">
+                          <img src="gfpimg\choco-muffin.jpg" class="card-img-top" alt="...">
                           <div class="card-body">
                             <h4 class="card-title">Choco ZanaBana Muffin</h4>
                             <h5 class="card-title">&#8353; 2,000</h5>
@@ -177,7 +177,7 @@
                 <div class="row d-flex justify-content-center">
                   <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                     <div class="card">
-                        <img src="D:\Documents\Go Food Pro\gfpimg\mantequillam.jpg" class="card-img-top" alt="...">
+                        <img src="gfpimg\mantequillam.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h4 class="card-title">Mantequilla de Maní</h4>
                           <h5 class="card-title">&#8353; 2,000</h5>
@@ -197,7 +197,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                       <div class="card">
-                          <img src="D:\Documents\Go Food Pro\gfpimg\mantequillaa.jpg" class="card-img-top" alt="...">
+                          <img src="gfpimg\mantequillaa.jpg" class="card-img-top" alt="...">
                           <div class="card-body">
                             <h4 class="card-title">Mantequilla de Almendras</h4>
                             <h5 class="card-title">&#8353; 2,000</h5>
@@ -223,7 +223,7 @@
                 <div class="row d-flex justify-content-center">
                   <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                     <div class="card">
-                        <img src="D:\Documents\Go Food Pro\gfpimg\chocococadas.jpg" class="card-img-top" alt="...">
+                        <img src="gfpimg\chocococadas.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h4 class="card-title">Choco Cocadas</h4>
                           <h5 class="card-title">&#8353; 2,000</h5>
@@ -249,7 +249,7 @@
                 <div class="row d-flex justify-content-center">
                   <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                     <div class="card">
-                        <img src="D:\Documents\Go Food Pro\gfpimg\nutcrackerbread.jpg" class="card-img-top" alt="...">
+                        <img src="gfpimg\nutcrackerbread.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h4 class="card-title">Nutcracker Bread</h4>
                           <h5 class="card-title">&#8353; 2,000</h5>
@@ -269,7 +269,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                       <div class="card">
-                          <img src="D:\Documents\Go Food Pro\gfpimg\ketonutcracker.jpg" class="card-img-top" alt="...">
+                          <img src="gfpimg\ketonutcracker.jpg" class="card-img-top" alt="...">
                           <div class="card-body">
                             <h4 class="card-title">Keto Nutcracker Bread</h4>
                             <h5 class="card-title">&#8353; 2,000</h5>
@@ -295,7 +295,7 @@
                 <div class="row d-flex justify-content-center">
                   <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                     <div class="card">
-                        <img src="D:\Documents\Go Food Pro\gfpimg\proballs.jpg" class="card-img-top" alt="...">
+                        <img src="gfpimg\proballs.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h4 class="card-title">Proballs</h4>
                           <h5 class="card-title">&#8353; 2,000</h5>
@@ -321,7 +321,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
               <div class="card">
-                  <img src="D:\Documents\Go Food Pro\gfpimg\Crunchbars.jpg" class="card-img-top" alt="...">
+                  <img src="gfpimg\Crunchbars.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h4 class="card-title">Crunch Bars</h4>
                     <h5 class="card-title">&#8353; 2,000</h5>
@@ -347,7 +347,7 @@
                 <div class="row d-flex justify-content-center">
                   <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                     <div class="card">
-                        <img src="D:\Documents\Go Food Pro\gfpimg\donas.jpg" class="card-img-top" alt="...">
+                        <img src="gfpimg\donas.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h4 class="card-title">Donas</h4>
                           <h5 class="card-title">&#8353; 2,000</h5>
@@ -373,7 +373,7 @@
                     <div class="row d-flex justify-content-center">
                       <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                         <div class="card">
-                            <img src="D:\Documents\Go Food Pro\gfpimg\quequecamote.jpg" class="card-img-top" alt="...">
+                            <img src="gfpimg\quequecamote.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h4 class="card-title">Queque de Camote y Cacao</h4>
                               <h5 class="card-title">&#8353; 2,000</h5>
@@ -393,7 +393,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-5 mt-5">
                           <div class="card">
-                              <img src="D:\Documents\Go Food Pro\gfpimg\quequecamote.jpg" class="card-img-top" alt="...">
+                              <img src="gfpimg\quequecamote.jpg" class="card-img-top" alt="...">
                               <div class="card-body">
                                 <h4 class="card-title">Queque de Limón</h4>
                                 <h5 class="card-title">&#8353; 2,000</h5>
@@ -422,4 +422,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
+  <script type="text/javascript" src="gdp.js"></script>
 </html>
