cart and products

--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -34,18 +34,17 @@
         </button>
       </div>
       <div id="modal" class="modal-body">
-        <a href="https://web.whatsapp.com/send?text=textToshare" target="_blank">Share via Whatsapp</a>
         <div class="container">
           <div class="row">
             <div id="product-card" class="col-12">
             </div>
             <div id='total'></div>
+            
           </div>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <div id="whatsapp"></div>
       </div>
     </div>
   </div>
