--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -107,10 +107,11 @@
     <div class="row mt-2">
       <section id="Galletas"></section>
       <div id='categories' class="col-12 mt-5">
-        <h1 class="display-4 text-center">-Galletas-</h1>
+        <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-2 mt-2">
+        </div>
       </div>
     </div>
-    <div id='cards' class="row d-flex justify-content-center">
+    <div id='cards-temp' class="row d-flex justify-content-center">
       <!-- Start Product-1 -->
       <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-2 mt-2">
         <div id='card-id' class="card">
