--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -105,9 +105,8 @@
   <!-- Start Content -->
   <div class="container">
     <div class="row mt-2">
-      <section id="Galletas"></section>
-      <div id='categories' class="col-12 mt-5">
-        <h1 class="display-4 text-center">-Galletas-</h1>
+      <div id='products' class="col-12 mt-5">
+
       </div>
     </div>
     <div id='cards' class="row d-flex justify-content-center">
