Revert "Update gofoodpro.html"
This reverts commit 863ed3655305f2920ff8ffd1ddd321b3ee6bed73.

--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -57,14 +57,14 @@
   <!-- Image and text -->
   <nav class="navbar navbar-dark navbar-expand-md bg-#BBD646 sticky-top">
     <a class="navbar-brand" href="#">
-      <img class="headerpic" src="gfpimg/logo go food pro-02 (1).png" width="80" height="80" class="d-inline-block align-top" alt="">
+      <img class="headerpic" src="gfpimg/_BEE1232.png" width="80" height="80" class="d-inline-block align-top" alt="">
     </a>
-    <div class="w-100">
+    <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse d-flex justify-content-end w-100" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav center">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -92,7 +92,7 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
-          <li class="cart d-flex align-items-center">
+          <li class="cart">
             <a href="#" data-toggle="modal" data-target="#exampleModal">
               <i class="fas fa-shopping-cart"></i><span id='numberCart'>0</span>
             </a>
