--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -57,7 +57,7 @@
   <!-- Image and text -->
   <nav class="navbar navbar-dark navbar-expand-md bg-#BBD646 sticky-top">
     <a class="navbar-brand" href="#">
-      <img class="headerpic" src="gfpimg/_BEE1232.png" width="80" height="80" class="d-inline-block align-top" alt="">
+      <img class="headerpic" src="gfpimg/logo go food pro-02 (1).png" width="80" height="80" class="d-inline-block align-top" alt="">
     </a>
     <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
