--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -59,7 +59,7 @@
     <a class="navbar-brand" href="#">
       <img class="headerpic" src="gfpimg/logo go food pro-02 (1).png" width="80" height="80" class="d-inline-block align-top" alt="">
     </a>
-    <div class="container">
+    <div class="w-100">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
