--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -27,6 +27,9 @@
 </head>
 
 <body>
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=AaiFssyERp2W4G29opHIfXPJJOn2ezuz4XWicggBlFGI6Fb50ERE3Lbt8WOUVmg-EhnxZkLGb6N_Zddq"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+  </script>
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -49,6 +52,7 @@
         </div>
         <div class="modal-footer">
           <div id="whatsapp"></div>
+          <div id="paypal-button-container"></div>
         </div>
       </div>
     </div>
