--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -1,31 +1,20 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- JavaScript -->
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- CSS Style Sheet -->
   <link rel="stylesheet" href="gofoodpro.css">
-
   <!-- Google Fonts-->
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&display=swap" rel="stylesheet">
-
-
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&display=swap" rel="stylesheet"> -->
   <!-- Font Awesome-->
   <script src="https://kit.fontawesome.com/3d9ffe25b9.js" crossorigin="anonymous"></script>
-
   <title>Go Food Pro</title>
 </head>
-
 <body>
   <script
     src="https://www.paypal.com/sdk/js?client-id=AaiFssyERp2W4G29opHIfXPJJOn2ezuz4XWicggBlFGI6Fb50ERE3Lbt8WOUVmg-EhnxZkLGb6N_Zddq"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
@@ -46,7 +35,6 @@
               <div id="product-card" class="col-12">
               </div>
               <div id='total'></div>
-
             </div>
           </div>
         </div>
@@ -78,16 +66,8 @@
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Productos
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#Galletas">Galletas</a>
-              <a class="dropdown-item" href="#Muffins">Muffins</a>
-              <a class="dropdown-item" href="#Mantequillas">Mantequillas</a>
-              <a class="dropdown-item" href="#Chocococadas">Choco Cocadas</a>
-              <a class="dropdown-item" href="#Nutcrackerbread">Nutcracker Bread</a>
-              <a class="dropdown-item" href="#Proballs">Pro Balls</a>
-              <a class="dropdown-item" href="#Crunchbars">Crunch Bars</a>
-              <a class="dropdown-item" href="#Donas">Donas</a>
-              <a class="dropdown-item" href="#Queques">Queques</a>
+            <div id="categories-menu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              
             </div>
           </li>
           <li class="nav-item">
@@ -115,20 +95,21 @@
   </div>
     <!-- End Container -->
   </div>
-
-
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  </script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
+  </script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
+  <!-- custom scripts -->
+  <script type="text/javascript" src="list.js"></script>
+  <script type="text/javascript" src="gdp.js"></script>
 </body>
-<script type="text/javascript" src="gdp.js"></script>
 
 </html>
