--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -47,7 +47,8 @@
         </div>
         <div class="modal-footer">
           <div id="whatsapp"></div>
-          <div id="paypal-button-container"></div>
+          <div id="a-cart"></div>
+          <!-- <div id="paypal-button-container"></div> -->
         </div>
       </div>
     </div>
