--- a/cart.html
+++ b/cart.html
@@ -97,10 +97,32 @@
         <div class="row mt-2">
             <div id="carts" class="col-12">
             </div>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                          <th scope="col">Imagen</th>
+                          <th scope="col">Nombre</th>
+                          <th scope="col">Descripcion</th>
+                          <th scope="col">Cantidad</th>
+                          <th scope="col">Eliminar</th>
+                        </tr>
+                      </thead>
+                      <tbody id="td-products">
+                        <tr>
+                          <th scope="row">1</th>
+                          <td>Mark</td>
+                          <td>Otto</td>
+                          <td>@mdo</td>
+                        </tr>
+                      </tbody>
+                </table>
+              </div>
             <div id='total-cart' class="col-12"></div>
             <div class="div-buttons">
-                <div id="paypal-button-container"></div>
                 <div id="whatsapp"></div>
+                <div id="paypal-button-container"></div>
+                
             </div>
 
             <!-- <div id='products' class="col-12 mt-5">
