--- a/cart.html
+++ b/cart.html
@@ -54,7 +54,7 @@
     <!-- Start Nav Bar -->
     <!-- Image and text -->
     <nav class="navbar navbar-dark navbar-expand-md bg-#BBD646 sticky-top">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/index.html">
             <img class="headerpic" src="gfpimg/icon.png" width="80" height="80" class="d-inline-block align-top" alt="">
         </a>
         <div class="w-100">
