--- a/gofoodpro.html
+++ b/gofoodpro.html
@@ -77,7 +77,7 @@
   <!-- Start Nav Bar -->
   <!-- Image and text -->
   <nav class="navbar navbar-dark navbar-expand-md bg-#BBD646 sticky-top header pb-1">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/index.html">
       <img class="headerpic" src="gfpimg/icon.png" width="100" height="100" class="d-inline-block align-top" alt="">
     </a>
     <div class="w-100">
