--- a/cart.html
+++ b/cart.html
@@ -68,14 +68,13 @@
                         <a class="nav-link" href="gofoodpro.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Productos
-            </a>
-            <div id="categories-menu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-
-            </div>
-          </li> -->
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Productos
+                    </a>
+                    <div id="categories-menu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">              
+                    </div>
+                </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
                     </li>
@@ -84,9 +83,9 @@
                     </li>
                     <!-- <li class="cart">
             <a href="#" data-toggle="modal" data-target="#exampleModal">
-              <i class="fas fa-shopping-cart"></i><span id='numberCart'>0</span>
+                <i class="fas fa-shopping-cart"></i><span id='numberCart'>0</span>
             </a>
-          </li> -->
+        </li> -->
                 </ul>
             </div>
         </div>
@@ -101,32 +100,33 @@
                 <table class="table">
                     <thead>
                         <tr>
-                          <th scope="col">Imagen</th>
-                          <th scope="col">Nombre</th>
-                          <th scope="col">Descripcion</th>
-                          <th scope="col">Cantidad</th>
-                          <th scope="col">Eliminar</th>
+                            <th scope="col">Imagen</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Descripcion</th>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">Eliminar</th>
                         </tr>
-                      </thead>
-                      <tbody id="td-products">
+                    </thead>
+                    <tbody id="td-products">
                         <tr>
-                          <th scope="row">1</th>
-                          <td>Mark</td>
-                          <td>Otto</td>
-                          <td>@mdo</td>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
                         </tr>
-                      </tbody>
+                    </tbody>
                 </table>
-              </div>
+            </div>
             <div id='total-cart' class="col-12"></div>
             <div class="div-buttons">
                 <div id="whatsapp"></div>
                 <div id="paypal-button-container"></div>
-                
+
             </div>
 
             <!-- <div id='products' class="col-12 mt-5">
-      </div> -->
+                
+            </div> -->
         </div>
     </div>
     <!-- End Container -->
@@ -134,11 +134,9 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-  </script> -->
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script> -->
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
