--- a/cart.html
+++ b/cart.html
@@ -53,19 +53,19 @@
     </div>
     <!-- Start Nav Bar -->
     <!-- Image and text -->
-    <nav class="navbar navbar-dark navbar-expand-md bg-#BBD646 sticky-top">
+    <nav class="navbar navbar-light navbar-expand-md bg-#BBD646 sticky-top header">
         <a class="navbar-brand" href="#">
             <img class="headerpic" src="gfpimg/icon.png" width="80" height="80" class="d-inline-block align-top" alt="">
         </a>
         <div class="w-100">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavCart"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNavCart">
                 <ul class="navbar-nav center">
                     <li class="nav-item active">
-                        <a class="nav-link" href="gofoodpro.html">Home<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="gofoodpro.html">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -76,12 +76,12 @@
 
             </div>
           </li> -->
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
+                    </li> -->
                     <!-- <li class="cart">
             <a href="#" data-toggle="modal" data-target="#exampleModal">
               <i class="fas fa-shopping-cart"></i><span id='numberCart'>0</span>
