--- a/cart.html
+++ b/cart.html
@@ -65,7 +65,7 @@
             <div class="collapse navbar-collapse" id="navbarNavCart">
                 <ul class="navbar-nav center">
                     <li class="nav-item active">
-                        <a class="nav-link" href="gofoodpro.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
