May-12 Css Changes

--- a/cart.html
+++ b/cart.html
@@ -65,7 +65,7 @@
             <div class="collapse navbar-collapse" id="navbarNavCart">
                 <ul class="navbar-nav center">
                     <li class="nav-item active">
-                        <a class="nav-link" href="gofoodpro.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -75,12 +75,12 @@
                     <div id="categories-menu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">              
                     </div>
                 </li> -->
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li> -->
+                    </li>  -->
                     <!-- <li class="cart">
             <a href="#" data-toggle="modal" data-target="#exampleModal">
                 <i class="fas fa-shopping-cart"></i><span id='numberCart'>0</span>
