--- a/cart.html
+++ b/cart.html
@@ -119,7 +119,7 @@
             </div>
             <div>
                 <form>
-                    <p>Seleccione si requiere envio (costo:2000₡):</p>
+                    <p>Seleccione si requiere envio: (Costo del envio ₡ 2000)</p>
                     <input onchange="changeDevilery(this.value)" type="radio" id="si" name="select" value="Si">
                     <label for="si">Si</label><br>
                     <input onchange="changeDevilery(this.value)" type="radio" id="no" name="select" value="no">
