--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
   <!-- Font Awesome-->
   <script src="https://kit.fontawesome.com/3d9ffe25b9.js" crossorigin="anonymous"></script>
   <title>Go Food Pro</title>
+  <link rel="canonical" href="https://www.gofoodpro.com/">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="description" content="Tienda online en Costa Rica de snacks y productos saludables.">
+<meta name="keywords" content="go food pro, tienda online costa rica, snacks nutritivos, snacks costa rica">
+<meta property="og:title" content="GO FOOD PRO | Ingenio en Alimentos">
+<meta property="og:url" content="https://www.gofoodpro.com/">
+<meta property="og:image" content="https://www.usracing.com/img/best-horse-racing-betting-site.jpg">
+<meta property="og:description" content="Bet on horses with 200 racetracks and an 8% rebate paid to you daily. Join now to get a 20% Cash Bonus instantly and qualify for a $150 bonus. Learn more here about online horse betting">
 </head>
 
 <body>
