--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="gofoodpro.css">
   <!-- Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,400;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <!-- Font Awesome-->
   <script src="https://kit.fontawesome.com/3d9ffe25b9.js" crossorigin="anonymous"></script>
   <title>Go Food Pro</title>
@@ -119,10 +120,10 @@
   <!-- END Nav BAR -->
   <!-- Start Carrousel or Jumbotron -->
   <div class="jumbotron text-right">
-    <h1 class="display-4">Go Food Pro</h1>
-    <p class="lead">Envíos Gratis por tu primera compra en línea</p>
+    <h1 class="display-4"> <img src="gfpimg/icon.png" width="150" height="150" class="jumboicon" alt="">Go Food Pro</h1>
+    <p class="lead">Ingenio en snacks nutritivos</p>
     <hr class="my-4">
-    <p>Aplican Terminos & Condiciones*</p>
+    <p class="jumbotronp">100% costarricense</p>
     <a class="btn btn-success btn-lg" href="#galletas" role="button">Comprar</a>
   </div>
   <!-- End Carrousel or Jumbotron -->
