--- a/cart.html
+++ b/cart.html
@@ -151,7 +151,7 @@
     </script>
     <!-- custom scripts -->
     <script type="text/javascript" src="list.js"></script>
-    <script type="text/javascript" src="gdp.js"></script>
+    <!-- <script type="text/javascript" src="gdp.js"></script> -->
     <script type="text/javascript" src="cart.js"></script>
 </body>
 
