--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                       </tbody>
                 </table>
               </div>
-              <div id='total'></div>
             </div>
           </div>
         </div>
         <div class="modal-footer">
+          <div id='total' class="modaltotal"></div>
           <div id="whatsapp"></div>
           <div id="a-cart"></div>
           <!-- <div id="paypal-button-container"></div> -->
