--- a/cart.html
+++ b/cart.html
@@ -117,20 +117,23 @@
                     </tbody>
                 </table>
             </div>
-            <div>
+            <div class="container">
+            <div class="row formdelivery">
                 <form>
-                    <p>Seleccione si requiere envio: (Costo del envio ₡ 2000)</p>
+                    <p>Seleccione si requiere envío: (Costo del envo ₡ 2000)</p>
                     <input onchange="changeDevilery(this.value)" type="radio" id="si" name="select" value="Si">
                     <label for="si">Si</label><br>
                     <input onchange="changeDevilery(this.value)" type="radio" id="no" name="select" value="no">
                     <label for="no">No</label><br>
                 </form>
             </div>
-            <div id='total-cart' class="col-12"></div>
+            <div class="row">
+            <div id='total-cart' class="col-12"></div></div>
             <div class="div-buttons">
                 <div id="whatsapp"></div>
                 <div id="paypal-button-container"></div>
             </div>
+        </div>
 
             <!-- <div id='products' class="col-12 mt-5">
                 
