may-14 css chages

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <meta name="keywords" content="go food pro, tienda online costa rica, snacks nutritivos, snacks costa rica">
 <meta property="og:title" content="GO FOOD PRO | Ingenio en Alimentos">
 <meta property="og:url" content="https://www.gofoodpro.com/">
-<meta property="og:image" content="https://www.usracing.com/img/best-horse-racing-betting-site.jpg">
-<meta property="og:description" content="Ingenio en snacks nutritivos, deliciosos y con ingredientes reales• sin preservantes • Somos gluten friendly • 100% costarricenses">
+<meta property="og:image" content="https://www.gofoodpro.com/los-mejores-snacks-costarica.jpg">
+<meta property="og:description" content="Ingenio en snacks nutritivos, deliciosos y con ingredientes reales• Sin preservantes • Somos gluten friendly • 100% costarricense">
 </head>
 
 <body>
