--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-K63NLKH');</script>
+  <!-- End Google Tag Manager -->
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,7 +31,7 @@
   <link rel="canonical" href="https://www.gofoodpro.com/">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="Tienda online en Costa Rica de snacks nutritivos, deliciosos y con ingredientes reales. Productos 100% costarricenses.">
-<meta name="keywords" content="go food pro, tienda online costa rica, snacks nutritivos, snacks costa rica">
+<meta name="keywords" content="go food pro, tienda online costa rica, snacks nutritivos, snacks costa rica, gluten free, keto">
 <meta property="og:title" content="GO FOOD PRO | Ingenio en Alimentos">
 <meta property="og:url" content="https://www.gofoodpro.com/">
 <meta property="og:image" content="https://www.gofoodpro.com/los-mejores-snacks-costarica.jpg">
@@ -31,6 +39,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K63NLKH"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <script
     src="https://www.paypal.com/sdk/js?client-id=AaiFssyERp2W4G29opHIfXPJJOn2ezuz4XWicggBlFGI6Fb50ERE3Lbt8WOUVmg-EhnxZkLGb6N_Zddq">
     // Required. Replace SB_CLIENT_ID with your sandbox client ID.
