--- a/cart.html
+++ b/cart.html
@@ -31,7 +31,7 @@
 <meta name="description" content="Tienda online en Costa Rica de snacks nutritivos, deliciosos y con ingredientes reales. Productos 100% costarricenses.">
 <meta name="keywords" content="go food pro, tienda online costa rica, snacks nutritivos, snacks costa rica, gluten free, keto">
 <meta property="og:title" content="GO FOOD PRO | Ingenio en Alimentos">
-<meta property="og:url" content="https://www.gofoodpro.com/">
+<meta property="og:url" content="https://www.gofoodpro.com/carrito">
 <meta property="og:image" content="https://www.gofoodpro.com/los-mejores-snacks-costarica.jpg">
 <meta property="og:description" content="Ingenio en snacks nutritivos, deliciosos y con ingredientes reales• Sin preservantes • Somos gluten friendly • 100% costarricense">
 </head>
