--- a/carrito.html
+++ b/carrito.html
@@ -149,6 +149,8 @@
             <div class="row">
             <div id='total-cart' class="col-12"></div></div>
             <div class="div-buttons">
+                <div id='button-comprar'><button id="button-comprar-2" class="btn btn-success">Comprar</button></div>
+                
                 <div id="whatsapp"></div>
                 <div id="paypal-button-container"></div>
             </div>
