--- a/carrito.html
+++ b/carrito.html
@@ -139,7 +139,7 @@
             <div class="container">
             <div class="row formdelivery">
                 <form>
-                    <p>Seleccione si requiere envío: (Costo del envo ₡ 2000)</p>
+                    <p>Seleccione si requiere envío: (Costo del envío ₡ 2000)</p>
                     <input onchange="changeDevilery(this.value)" type="radio" id="si" name="select" value="Si">
                     <label for="si">Si</label><br>
                     <input onchange="changeDevilery(this.value)" type="radio" id="no" name="select" value="no">
