--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <!-- END Nav BAR -->
   <!-- Start Carrousel or Jumbotron -->
   <div class="jumbotron text-right">
-    <h1 class="display-4"> <img src="gfpimg/icon.png" width="150" height="150" class="jumboicon" alt="">Go Food Pro</h1>
+    <h1 class="display-4"> <img src="gfpimg/icon.png" class="jumboicon" alt="">Go Food Pro</h1>
     <p class="lead">Ingenio en snacks nutritivos</p>
     <hr class="my-4">
     <p class="jumbotronp">100% costarricense</p>
