--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <p class="lead">Ingenio en snacks nutritivos</p>
     <hr class="my-4">
     <p class="jumbotronp">100% costarricense</p>
-    <a class="btn btn-success btn-lg" href="#galletas" role="button">Comprar</a>
+    <a class="btn btn-success btn-lg" href="https://api.whatsapp.com/send?phone=50688906767" role="button">Comprar</a>
   </div>
   <!-- End Carrousel or Jumbotron -->
   <!-- Start Content -->
