Cambios fuertes 31 May

--- a/carrito.html
+++ b/carrito.html
@@ -84,7 +84,7 @@
             <div class="collapse navbar-collapse" id="navbarNavCart">
                 <ul class="navbar-nav center">
                     <li class="nav-item active">
-                        <a class="nav-link" href="http://www.gofoodpro.com/">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="http://www.gofoodpro.com/">Tienda<span class="sr-only">(current)</span></a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
