--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -137,16 +137,12 @@
   </nav>
   <!-- END Nav BAR -->
   <!-- Start  Jumbotron -->
-  <!-- <div class="jumbotron text-right">
-    <h1 class="display-4"> <img src="gfpimg/icon.png" class="jumboicon" alt="">Go Food Pro</h1>
-    <p class="lead">Ingenio en snacks nutritivos</p>
-    <hr class="my-4">
-    <p class="jumbotronp">100% costarricense</p>
-    <a class="btn btn-success btn-lg" href="mantequillas" role="button">Comprar</a>
-  </div> -->
+  <div class="jumbotron text-right">
+    <h1 class="display-4 m-4">Nuestra Historia</h1>
+  </div>
   <!-- End Jumbotron -->
   <!-- Start Carrousel -->
-  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+  <!-- <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -192,49 +188,120 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div>
+  </div> -->
   <!-- End Carrousel -->
   <!-- Start Content -->
   <section class="content">
-  <div class="container">
-    <ul class="nav nav-tabs nav-fill justify-content-center">
+  <div class="container-fluid">
+    <!-- <ul class="nav nav-tabs nav-fill justify-content-center">
       <li class="nav-item">
         <a class="nav-link active" href="#mantequillas">Mantequillas</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#snacks">Snacks</a>
       </li>
-    </ul>
+    </ul> -->
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i>
     </button>
-    <div class="row">
+    <!-- <div class="row">
       <div id='products' class="col-12 mt-5">
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
   <!-- End Content -->
-  <div class="container-fluid">
-    <div class="row justify-content-center">
-      <div class="column-6">
-        <h1 class="display-4 text-center mt-4 mb-0 bg-white p-3">-Nuestra Historia-</h1>
-  <div class="card mb-3">
-    <img src="gfpimg\aboutusgfp.PNG" class="card-img-top-historia" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Go Food Pro nació a través de mi experiencia personal con la alimentación y mi vida laboral. Como ingeniera en alimentos, es un reto conservar un alimento sin tener que sacrificar su verdadera calidad. Personalmente siempre me ha gustado la hora del café y nunca encontraba ´´mi merienda ideal´´ alimentos que no tuvieran preservantes o azúcar añadida, por esta razón comencé a buscar materias primas nacionales que fueran de calidad y con las que las personas se relacionaran ya que, como buenos ticos, somos muy tradicionalistas y nos gusta lo conocido.
-
-        Comencé a generar recetas tradicionales, pero con un valor agregado, haciéndolas deliciosas, pero utilizando ingredientes reales. Entre ellos muffins de banano con zanahoria sin azúcar (consumido por diabéticos), donas de camote y chocolate al 70% que a los deportistas y a los niños les encantan, pan de semillas mixtas con fibra para ayudar al sistema digestivo, galletas con azúcar con endulzantes de bajo en índice glicémico y con cacao 100% para dar satisfacción sin tener picos de azúcar en sangre, mantequilla de maní con sabor a leche condensada, pero SIN azúcar y SIN lácteos ¡Una verdadera maravilla!
-        
-        Nuestros productos van dirigidos a todo tipo de consumidores, desde personas con alguna necesidad o condición alimentaria como alérgicos al huevo o a los lácteos, diabéticos que no pueden encontrar productos sin azúcar para ellos en el supermercado, madres que están en periodo de lactancia y no pueden consumir ciertos alimentos, niños que quieran meriendas con ingredientes reales y sin preservantes o trabajadores de oficina que quieran algún alimento para consumir en su jornada laboral que le de energía y no le cause molestias en el estómago y lo haga sentir bien para seguir con su trabajo.</p>
-      <p class="card-text"><small class="text-muted"> <a href="#"> Leer más</small></a></p>
-    </div>
-  </div>
-  </div>
+  <section class="container-fluid">
+    <div class="row  justify-content-center pb-0">
+  <div class="col-lg-5 justify-content-center p-0"><img src="gfpimg/aboutus.jpg" class="img-fluid" alt=""></div>
+  <div class="col-lg-5 text-center justify-content-center p-3 pnuestra">
+    <img src="gfpimg/icon.png" class="jumboiconp" alt="">
+    <p>Go Food Pro nació a través de mi experiencia personal con la alimentación y mi vida laboral. Como ingeniera en alimentos, es un reto conservar un alimento sin tener que sacrificar su verdadera calidad. Personalmente siempre me ha gustado la hora del café y nunca encontraba ´´mi merienda ideal´´ alimentos que no tuvieran preservantes o azúcar añadida, por esta razón comencé a buscar materias primas nacionales que fueran de calidad y con las que las personas se relacionaran ya que, como buenos ticos, somos muy tradicionalistas y nos gusta lo conocido.</p>
+    <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
   </div>
 </div>
-    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-    <div class="elfsight-app-f14e22be-94f5-4e7f-90b0-93561b4aacc2"></div>
+    </div>
+    <div class="row  justify-content-center pb-0">
+      <div class="col-lg-5 justify-content-center p-0 order-1 order-sm-2"><img class="img-fluid" src="gfpimg/about-us2.jpg" alt=""></div>
+      <div class="col-lg-5 text-center justify-content-center order-2 order-sm-1 p-3 pnuestra">
+        <img src="gfpimg/icon.png" class="jumboiconp" alt="">
+        <p>Comencé a generar recetas tradicionales, pero con un valor agregado, haciéndolas deliciosas, pero utilizando ingredientes reales. Entre ellos muffins de banano con zanahoria sin azúcar (consumido por diabéticos), donas de camote y chocolate al 70% que a los deportistas y a los niños les encantan, pan de semillas mixtas con fibra para ayudar al sistema digestivo, galletas con azúcar con endulzantes de bajo en índice glicémico y con cacao 100% para dar satisfacción sin tener picos de azúcar en sangre, mantequilla de maní con sabor a leche condensada, pero SIN azúcar y SIN lácteos ¡Una verdadera maravilla!</p>
+        <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
+      </div>
+    </div>
+    <div class="row  justify-content-center pb-0">
+      <div class="col-lg-5 mb-md-4 justify-content-center p-0 order-1"><img class="img-fluid" src="gfpimg/about-us3.jpg" alt=""></div>
+      <div class="col-lg-5 mb-4 text-center justify-content-center order-2  p-3 pnuestra">
+        <img src="gfpimg/icon.png" class="jumboiconp" alt="">
+        <p>Nuestros productos van dirigidos a todo tipo de consumidores, desde personas con alguna necesidad o condición alimentaria como alérgicos al huevo o a los lácteos, diabéticos que no pueden encontrar productos sin azúcar para ellos en el supermercado, madres que están en periodo de lactancia y no pueden consumir ciertos alimentos, niños que quieran meriendas con ingredientes reales y sin preservantes o trabajadores de oficina que quieran algún alimento para consumir en su jornada laboral que le de energía y no le cause molestias en el estómago y lo haga sentir bien para seguir con su trabajo.</p>
+        <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
+      </div>
+    </div>
+        </div>
+  </section>
+  <!-- <section class="container-fluid px-0 nh">
+    <div class="row align-items-center">
+      <div class="col-lg-6">
+        <div id="headingtitle" class="text-white text-center d-none d-lg-block mt-5">
+            <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+        </div>
+        
+      </div>
+      <div class="col-lg-6 px-0"><img class="img-fluid" src="gfpimg/aboutusgfp.PNG" alt=""></div>
+    </div>
+    </section>
+    <section>
+      <div class="container-fluid px-0">
+    <div class="row text-white text-center align-items-center content1">
+      <div class="col-md-6 px-0 order-2 order-md-1">
+        <img src="C:\Users\Fa_vi\Desktop\Musuemofcandy\imgs\milk.png" alt="" class="img-fluid">
+      </div>
+      <div class="col-md-6 order-1 order-md-2">
+        <div class="row align-items-center justify-content-center between">
+          <div class="col-10 col-lg-8 miau mb-5 mb-md-0">
+            <h2>MUSUEM OF CANDY</h2> <img src="C:\Users\Fa_vi\Desktop\Musuemofcandy\imgs\lolli_icon.png" class="d-none d-lg-inline" alt="">
+      <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, magnam. Itaque similique quod, repellendus a tenetur quisquam asperiores fugiat nesciunt unde ratione. Hic, commodi. Placeat aperiam numquam aut quo repellat.</p>
+          </div>
+        </div>
+            </div>
+    </div>
+      </div>
+      <div class="container-fluid px-0">
+        <div class="row text-white text-center align-items-center content1">
+          <div class="col-md-6 px-0 order-2 order-md-2">
+            <img src="C:\Users\Fa_vi\Desktop\Musuemofcandy\imgs\gumball.png" alt="" class="img-fluid">
+          </div>
+          <div class="col-md-6 order-1 order-md-1">
+            <div class="row align-items-center justify-content-center between">
+              <div class="col-10 col-lg-8 miau mb-5 mb-md-0">
+                <h2>MUSUEM OF CANDY</h2> <img src="C:\Users\Fa_vi\Desktop\Musuemofcandy\imgs\lolli_icon.png" class="d-none d-lg-inline" alt="">
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, magnam. Itaque similique quod, repellendus a tenetur quisquam asperiores fugiat nesciunt unde ratione. Hic, commodi. Placeat aperiam numquam aut quo repellat.</p>
+              </div>
+            </div>
+                </div>
+        </div>
+          </div>9
+          <div class="container-fluid px-0">
+            <div class="row text-white text-center align-items-center content1">
+              <div class="col-md-6 px-0 order-2 order-md-1">
+                <img src="C:\Users\Fa_vi\Desktop\Musuemofcandy\imgs\sprinkles.png" alt="" class="img-fluid">
+              </div>
+              <div class="col-md-6 order-1 order-md-2">
+                <div class="row align-items-center justify-content-center between">
+                  <div class="col-10 col-lg-8 miau mb-5 mb-md-0">
+                    <h2>MUSUEM OF CANDY</h2> <img src="C:\Users\Fa_vi\Desktop\Musuemofcandy\imgs\lolli_icon.png" class="d-none d-lg-inline" alt="">
+              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, magnam. Itaque similique quod, repellendus a tenetur quisquam asperiores fugiat nesciunt unde ratione. Hic, commodi. Placeat aperiam numquam aut quo repellat.</p>
+                  </div>
+                </div>
+                    </div>
+            </div>
+              </div>
+    </section> -->
   <!-- Start Footer -->
   <nav class="navbar navbar-dark bg-##000000 sticky-bottom footer">
     <a class="navbar-brand" href="#">Contáctenos</a>
