--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -109,7 +109,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav d-flex justify-content-center">
           <li class="nav-item active">
-            <a class="nav-link" href="gofoodpro.com">Tienda <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Tienda <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
