--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -138,7 +138,7 @@
   <!-- END Nav BAR -->
   <!-- Start  Jumbotron -->
   <div class="jumbotron text-right">
-    <h1 class="display-4 m-4">Nuestra Historia</h1>
+    <h1 class="display-4 m-4">F.A.Q</h1>
   </div>
   <!-- End Jumbotron -->
   <!-- Start Carrousel -->
