--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   </div>
 </section>
   <!-- End Content -->
-  <div class="container-fluid">
+  <!-- <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="column-6">
         <h1 class="display-4 text-center mt-4 mb-0 bg-white p-3">-Nuestra Historia-</h1>
@@ -232,7 +232,7 @@
   </div>
   </div>
   </div>
-</div>
+</div> -->
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <div class="elfsight-app-f14e22be-94f5-4e7f-90b0-93561b4aacc2"></div>
   <!-- Start Footer -->
